--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@ p    {color: black;}
   <h1>Welcome to my first website!</h1>
   <span style="color: purple; font-weight: bold">Here you can get to know me better, if you like.</span></h2>
     <br>
-            <p>My name is Emelie and I’m 33 years old. Currently I live in Halmstad with my wife and our two dogs.<br>
+        <p>My name is Emelie and I’m 33 years old. Currently I live in Halmstad with my wife and our two dogs.<br>
     <br>
     <img src="images/sigge_polly.jpg" alt="sigge_2" style="width:998px;height: 602px;;">
     <br>
-            <h3>Work and studies</h3>
+            <h3>Work & studies</h3>
             <p>I have been working as an E-commerce Coordinator at Blåkläder for the past seven years.
             <br>I have a degree as an E-business Manager, and I have also continued studying during my time at Blåkläder in topics such as
             <br>- Interaction design
@@ -36,7 +36,7 @@ p    {color: black;}
             departments and stakeholders at Blåkläder.
             <br>
             <br>I would like to improve my technical skills, to become more flexible in my work positions and to be more creative and 
-            self-going. So here I am, taking this course in frontend developing. <br></p>
+            self-going. So here I am, taking this course in frontend development. <br></p>
     <b>Read more about the course:</b> <a href="https://sundsgarden.se/utbildningar-kurser/langa-kurser/yrkesutbildningar/it-tech-for-women/">IT: Tech for women</a></p>
     <br>
     <br>
