--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@ h1   {color: lightsalmon;}
 p    {color: black;}
 </style>
   <h1>Welcome to my first website!</h1>
-  <span style="color: purple; font-weight: bold">Here you can get to know me better, if you like.</span></h2>
+  <span style="color: purple; font-weight: bold"><i>Here you can get to know me better, if you like.</i></span>
     <br>
-        <p>My name is Emelie and I’m 33 years old. Currently I live in Halmstad with my wife and our two dogs.<br>
+        <p>My name is Emelie and I’m 33 years old. Currently I live in Halmstad with my wife and our two dogs Sigge and Polly.<br>
     <br>
     <img src="images/sigge_polly.jpg" alt="sigge_2" style="width:998px;height: 602px;;">
-    <br>
+
+    <br><br>
             <h3>Work & studies</h3>
             <p>I have been working as an E-commerce Coordinator at Blåkläder for the past seven years.
             <br>I have a degree as an E-business Manager, and I have also continued studying during my time at Blåkläder in topics such as
@@ -26,8 +27,9 @@ p    {color: black;}
             <br>- Growth hacking
             <br>- Digital analytics
             <br><br>
+            
             <p>Blåkläder is one of the leading manufacturers of workwear and I have experience from developing the E-commerce business 
-                within both B2B and B2C. My role has always been very varied and I have learned a lot.
+                within both B2B and B2C. 
             <br>User experience and data-driven decisions are some things I am extra passionate
             about. I coordinate internally and externally to constantly improve our digital
             business and drive growth. 
@@ -35,11 +37,18 @@ p    {color: black;}
             located in both Sweden and Sri Lanka, as well as working closely with internal
             departments and stakeholders at Blåkläder.
             <br>
-            <br>I would like to improve my technical skills, to become more flexible in my work positions and to be more creative and 
+            <br>I would like to improve my technical skills, to become more flexible in my work position and to be more creative and 
             self-going. So here I am, taking this course in frontend development. <br></p>
     <b>Read more about the course:</b> <a href="https://sundsgarden.se/utbildningar-kurser/langa-kurser/yrkesutbildningar/it-tech-for-women/">IT: Tech for women</a></p>
-    <br>
-    <br>
+ <br>
+    <h3>My hobbies</h3>
+    <p>I have played football all my life and I have always been very interested in sports. Due to some serious knee injuries, I'm not able to play anymore,
+        <br>but football is still my absolute biggest interest. Besides football, I like to go for long walks with the dogs and play padel tennis, travel and enjoy good food!
+        <br>My favourite team is BK Häcken and I have a seasonal ticket, so me and my wife watch all the home games at the arena and also travel to some away games every year.</p>
+        <b><i>This is my favourite place to be:</i></b><br>
+        <img src="images/bravida.jpg" alt="bravida" style="width:400px;height: 600px;">
+    
+        <h3>Thanks for checking in!</h3>
             </div>
 
     <!--TODO: add another paragraph-->
