added css connection

--- a/index.html
+++ b/index.html
@@ -5,16 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <title>Document</title>
-</head>
-<style>
-    body {background-color: white;}
-h1   {color: lightsalmon;}
-p    {color: black;}
-</style>
+    <link rel="stylesheet" href="styles/index.css">
+</head> 
 <body>
     <header>
         <h1>Welcome to my first website!</h1>
-        <span style="color: purple; font-weight: bold"><i>Here you can get to know me better, if you like.</i></span>
+        <p style="color: purple; font-weight: bold"><i>Here you can get to know me better, if you like.</i></p>
     </header>
 
     <main>
@@ -35,7 +31,7 @@ p    {color: black;}
         </section>
             
         <section>
-            <p>Blåkläder is one of the leading manufacturers of workwear and I have experience from developing the E-commerce business 
+            <p style="color: green;">Blåkläder is one of the leading manufacturers of workwear and I have experience from developing the E-commerce business 
                 within both B2B and B2C. 
                 User experience and data-driven decisions are some things I am extra passionate about. 
                 I coordinate internally and externally to constantly improve our digital business and drive growth. 
