styling changes in index.css

--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
         <section>
             <p>My name is Emelie and I’m 33 years old. Currently I live in Halmstad with my wife and our two dogs Sigge and Polly.</p>
             <img src="images/sigge_polly.jpg" alt="a mixed breed dog in a park" style="width:998px;height: 602px;;">
-
+            <p class="dog-info">
+                A text about my dogs.
+            </p>
+            </section>
+            
+            <section>
             <h3>Work & studies</h3>
             <p>I have been working as an E-commerce Coordinator at Blåkläder for the past seven years.
             <br>I have a degree as an E-business Manager, and I have also continued studying during my time at Blåkläder in topics such as</p>
@@ -44,7 +49,7 @@
             <br>
         </section>
         <section><h3>My hobbies</h3>
-    <p>I have played football all my life and I have always been very interested in sports. Due to some serious knee injuries, I'm not able to play anymore,
+    <p class="hobbies">I have played football all my life and I have always been very interested in sports. Due to some serious knee injuries, I'm not able to play anymore,
         <br>but football is still my absolute biggest interest. Besides football, I like to go for long walks with the dogs and play padel tennis, travel and enjoy good food!
         <br>My favourite team is BK Häcken and I have a seasonal ticket, so me and my wife watch all the home games at the arena and also travel to some away games every year.</p>
         <b><i>This is my favourite place to be:</i></b><br>
