changed alt text of image

--- a/index.html
+++ b/index.html
@@ -7,11 +7,6 @@
     <title>My website</title>
     <link rel="stylesheet" href="styles/index.css">
 
-    <style>
-        h4 {
-            color: darkcyan;
-        }
-    </style>
 </head> 
 <body>
     <header>
@@ -22,7 +17,7 @@
     <main> 
         <section>
             <p>My name is Emelie and I’m 33 years old. Currently I live in Halmstad with my wife and our two dogs Sigge and Polly.</p>
-            <img src="images/sigge_polly.jpg" alt="a mixed breed dog in a park" style="width:998px;height: 602px;">
+            <img src="images/sigge_polly.jpg" alt="Two mixed breed dogs in a park" style="width:998px;height: 602px;">
             <p class="dog-info">
                 Sigge is a Bichon Havanais/Cavalier King Charles Spaniel mix and Polly is 70% Papillon, 15% Pomeranian and 15% Jack Russel. 
             </p>
@@ -79,7 +74,7 @@
         </section>
         
 
-        <h4><i>Thanks for checking in!</i></h4>
+        <h4>Thanks for checking in!</h4>
     </main>
 
     
