css changes and html button

--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
     <header>
         <h1>Welcome to my first website!</h1>
         <h2 style="color: purple; font-weight: bold"><i>Here you can get to know me better, if you like.</i></h2>
+        
     </header>
 
     <main> 
         <section>
             <p>My name is Emelie and I’m 33 years old. Currently I live in Halmstad with my wife and our two dogs Sigge and Polly.</p>
             <img src="images/sigge_polly.jpg" alt="Two mixed breed dogs in a park" style="width:998px;height: 602px;">
+            <br>
             <p class="dog-info">
                 Sigge is a Bichon Havanais/Cavalier King Charles Spaniel mix and Polly is 70% Papillon, 15% Pomeranian and 15% Jack Russel. 
             </p>
@@ -45,7 +47,7 @@
             <p>I would like to improve my technical skills, to become more flexible in my work position and to be more creative and 
             self-going. So here I am, taking this course in frontend development.</p>
     
-            <b>Read more about the course:</b> <a href="https://sundsgarden.se/utbildningar-kurser/langa-kurser/yrkesutbildningar/it-tech-for-women/">IT: Tech for women</a></p>
+            <button title="button" class="read more button" onclick=" window.open('https://sundsgarden.se/utbildningar-kurser/langa-kurser/yrkesutbildningar/it-tech-for-women/', '_blank'); return false;">Read more about the course</button>
         </section>
         <br>
         <section>
@@ -53,6 +55,7 @@
             <p class="hobbies">I have played football all my life and I have always been very interested in sports. Due to some serious knee injuries, I'm not able to play anymore,
             but football is still my absolute biggest interest. Besides football, I like to go for long walks with the dogs and play padel tennis, travel and enjoy good food!
             My favourite team is BK Häcken and I have a seasonal ticket, so me and my wife watch all the home games at the arena and also travel to some away games every year.</p>
+            <br>
             <u>My favourite places:</u>
                 <ol>
                     <li>At Bravida, watching BK Häcken play</li>
